# experimental_design

./: CMakeLists.txt  README.md  test.py
src/: e_surface.cpp  python_wrapper.cpp  sinusoidal_voltammetry.hpp  utilities.hpp
tests/: CMakeLists.txt  e_surface.hpp
